# bazel-datadog-bes

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
bzl/: go_repositories.bzl
cli/: BUILD.bazel  main.go
lib/: BUILD.bazel  ddclient.go
tools/: BUILD.bazel
