load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/chickenandpork/bazel-datadog-bes/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//lib:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_binary(
    name = "datadog-bes",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

alias(
    name = "cli",
    actual = "datadog-bes",
)
